@@ -19,3 +19,4 @@
 // Version 0.3
 - Added option for Incognito Downloads. (Useful if you don't actually want your Downloads History to be pretty much unusable because of spam from single pages)
 - Fixed issues when trying to create a folder containing one of the following characters, \/:*?"<>|
+- Added error messages when the server responded with an error when trying to grab links and info.
